@@ -28,30 +28,33 @@ on one day.
 !-->
 
 
+<dt><b>LilyPond 2.9.11 available</b> - <em>July 12, 2006</em>
+
+
+<dd>
+
+This release wraps improvements of the last two weeks.  As a new
+feature, it supports tunable tuplet number formatting for nested
+tuplets.  (<a
+href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>, <a
+href="install/#2.9">Download</a>)
+
+</dd>
+
+
+<dt><b>LilyPond 2.9.10 available</b> - <em>June 15, 2006</em>
+<dd>
+This releases fixes a couple of  bugs in 2.9.9. 
+(<a href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>,
+<a href="install/#2.9">Download</a>)
+</dd>
+
 <dt><b>LilyPond 2.9.9 available</b> - <em>June 15, 2006</em>
 <dd>
 This releases fixes many bugs in 2.9.8 and earlier. 
 (<a href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>,
 <a href="install/#2.9">Download</a>)
 </dd>
-
-<dt><b>LilyPond 2.9.8 available</b> - <em>June 6, 2006</em>
-
-<dd>
-2.9.8 has support for different spacing sections within a single
-score, and better infrastructure for automated regression testing.
-(<a href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>,
-<a href="install/#2.9">Download</a>)
-</dd>
-
-<dt><b>LilyPond 2.8.4 available</b> - <em>June 4, 2006</em>
-
-<dd>
-2.8.4 fixes some minor bugs, and includes a backport of the
-infrastructure for automated regression testing.
-(<a href="install/#2.8">Download</a>)
-</dd>
-
 
 
 </dl>
