@@ -22,6 +22,25 @@
       <dl>
 
 
+
+<dt><b>LilyPond 2.9.8 available</b> - <em>June 6, 2006</em>
+
+<dd>
+2.9.8 has support for different spacing sections within a single
+score, and better infrastructure for automated regression testing.
+(<a href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>,
+<a href="install/#2.9">Download</a>)
+</dd>
+
+<dt><b>LilyPond 2.8.4 available</b> - <em>June 4, 2006</em>
+
+<dd>
+2.8.4 fixes some minor bugs, and includes a backport of the
+infrastructure for automated regression testing.
+(<a href="install/#2.8">Download</a>)
+</dd>
+
+
 <dt><b>First test results available</b> - <em>June 4, 2006</em>
 
 <dd>
