@@ -1,3 +1,15 @@
+2006-07-12  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* site/news.ihtml (Preferably):  2.9.11. 
+
+2006-07-07  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* site/install/stable.ihtml: use x86 for darwin intel URL.
+
+2006-06-22  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* site/news.ihtml (Preferably): announce 2.9.10
+
 2006-07-09  Graham Percival  <gpermus@gmail.com>
 
 	* site/install/stable.ihtml: fixed link for OSX-x86 download.
